# neptune-protocol

./: .gitattributes  .gitignore  LICENSE  README.md  meson.build  meson_options.txt  npt_interface_ids.json  npt_registry.json  npt_registry_overlay.json  npt_registry_schema.json
docs/: neptune_command_serialization.txt
templates/: client.c  client.h  client_table.c  client_table.h  commands.h  common_cs.h  cs_helpers.h  defs.h  dispatch.h  dispatch_types.h  guest.h  guest_cs.h  host.h  host_cs.h  structs.h  types.h
tests/: meson.build  npt_cs.h  npt_test_harness.h  test_guest.c  test_host.c  test_roundtrip_manual.c  test_roundtrip_manual_guest.c
tools/: convert_midl.py  gen_headers.py  list_families.py  npt_allocate_interface_id.py  npt_codegen.py  npt_protocol.py  npt_registry.py  npt_testgen.py
