# Copyright 2026 Turing Software LLC
# SPDX-License-Identifier: Apache-2.0

project(
  'neptune-protocol',
  'c',
  version: '0.1',
  license: 'Apache-2.0',
  meson_version: '>=0.56.0',
  default_options: ['warning_level=2',
                    'werror=true',
                    'c_std=c11'],
)

py = import('python').find_installation('python3', modules: ['mako'])

npt_json = get_option('json')
npt_overlay = get_option('overlay')

npt_script_files = files(
  'tools/npt_protocol.py',
  'tools/npt_registry.py',
  'tools/npt_codegen.py',
  'tools/gen_headers.py',
  'tools/list_families.py',
)

npt_json_files = files(
  npt_json,
  npt_overlay,
  'npt_interface_ids.json',
)

npt_template_files = files(
  'templates/client.h',
  'templates/client.c',
  'templates/client_table.c',
  'templates/commands.h',
  'templates/common_cs.h',
  'templates/cs_helpers.h',
  'templates/defs.h',
  'templates/dispatch.h',
  'templates/dispatch_types.h',
  'templates/guest.h',
  'templates/guest_cs.h',
  'templates/host.h',
  'templates/host_cs.h',
  'templates/structs.h',
  'templates/types.h',
)

# Derive interface family names from the registry JSON so the list
# stays in sync with the generator automatically.
command_headers = run_command(
  py, files('tools/list_families.py'),
  '--json', meson.current_source_dir() / npt_json,
  '--overlay', meson.current_source_dir() / npt_overlay,
  check: true,
).stdout().strip().split('\n')

# Host-side outputs: defs + common + structs + per-family + toplevel + dispatch + umbrella
# Shared files (defs, common_*) are generated by the host target (first to run)
npt_protocol_host_outputs = [
  'npt_protocol_defs.h',
  'npt_protocol_common_cs.h',
  'npt_protocol_common_cs_helpers.h',
  'npt_protocol_common_types.h',
  'npt_protocol_host_cs.h',
  'npt_protocol_host_structs.h',
]
foreach family : command_headers
  npt_protocol_host_outputs += 'npt_protocol_host_' + family + '.h'
endforeach
npt_protocol_host_outputs += [
  'npt_protocol_host_toplevel.h',
  'npt_protocol_host_dispatch_types.h',
  'npt_protocol_host_dispatch.h',
  'npt_protocol_host.h',
]

# Guest-side outputs: cs + structs + per-family + toplevel + umbrella
# (defs.h and common_* are already produced by the host target)
#
# Two custom_targets share the work of generating guest-side code:
#
#   npt_protocol_guest         - wire encode/decode headers (the
#                                 "protocol layer")
#   npt_protocol_client        - per-family COM client header + out-of-line
#                                 .c bodies + global IID->ctor table
#                                 (the "object model layer" that sits on
#                                 top of the wire protocol)
#
# They are split because the client .c files reference `npt_com.h` which
# only exists in the consumer (mesa); the in-tree test_guest executable
# pulls in `npt_protocol_guest` (because it includes the per-family
# encode/decode headers via the umbrella) but must NOT auto-compile the
# client .c files.  Meson auto-compiles every .c output of a custom_target
# listed as an executable() source, so keeping the client outputs on a
# separate target that test_guest doesn't reference avoids the issue.
#
# The client custom_target invokes the same npt_protocol.py script with
# the --client-only flag, which runs only the client generation pass.
# The generator's content-aware write_file routine touches unchanged
# files so meson sees the outputs as up-to-date on incremental rebuilds.
npt_protocol_guest_outputs = [
  'npt_protocol_guest_cs.h',
  'npt_protocol_guest_structs.h',
]
foreach family : command_headers
  npt_protocol_guest_outputs += 'npt_protocol_guest_' + family + '.h'
endforeach
npt_protocol_guest_outputs += [
  'npt_protocol_guest_toplevel.h',
  'npt_protocol_guest.h',
]

npt_protocol_client_outputs = []
foreach family : command_headers
  npt_protocol_client_outputs += 'npt_protocol_client_' + family + '.h'
  npt_protocol_client_outputs += 'npt_protocol_client_' + family + '.c'
endforeach
npt_protocol_client_outputs += [
  'npt_protocol_client_table.h',
  'npt_protocol_client_table.c',
  'npt_client_families.txt',
]

npt_protocol_directx_types = custom_target(
  'npt_protocol_directx_types',
  input: ['tools/gen_headers.py'],
  output: 'npt_protocol_directx_types.h',
  command: [
    py, '@INPUT0@',
    '--json', meson.current_source_dir() / npt_json,
    '--overlay', meson.current_source_dir() / npt_overlay,
    '--output', meson.current_build_dir() / 'npt_protocol_directx_types.h',
  ],
  depend_files: [
    npt_script_files,
    npt_json_files,
  ],
  build_by_default: true,
)

npt_protocol_host = custom_target(
  'npt_protocol_host',
  input: ['tools/npt_protocol.py'],
  output: npt_protocol_host_outputs,
  command: [
    py, '@INPUT0@',
    '--outdir', meson.current_build_dir(),
    '--side', 'host',
    '--json', meson.current_source_dir() / npt_json,
    '--overlay', meson.current_source_dir() / npt_overlay,
  ],
  depend_files: [
    npt_script_files,
    npt_json_files,
    npt_template_files,
  ],
  build_by_default: true,
)

npt_protocol_guest = custom_target(
  'npt_protocol_guest',
  input: ['tools/npt_protocol.py'],
  output: npt_protocol_guest_outputs,
  command: [
    py, '@INPUT0@',
    '--outdir', meson.current_build_dir(),
    '--side', 'guest',
    '--json', meson.current_source_dir() / npt_json,
    '--overlay', meson.current_source_dir() / npt_overlay,
  ],
  depend_files: [
    npt_script_files,
    npt_json_files,
    npt_template_files,
  ],
  build_by_default: true,
)

npt_protocol_client = custom_target(
  'npt_protocol_client',
  input: ['tools/npt_protocol.py'],
  output: npt_protocol_client_outputs,
  command: [
    py, '@INPUT0@',
    '--outdir', meson.current_build_dir(),
    '--side', 'guest',
    '--client-only',
    '--json', meson.current_source_dir() / npt_json,
    '--overlay', meson.current_source_dir() / npt_overlay,
  ],
  depend_files: [
    npt_script_files,
    npt_json_files,
    npt_template_files,
  ],
  build_by_default: true,
)

subdir('tests')
